--- a/www/blog/wp-content/plugins/revslider/languages/revslider-en_US.po
+++ b/www/blog/wp-content/plugins/revslider/languages/revslider-en_US.po
@@ -4063,7 +4063,7 @@ msgstr ""
 
 #: ../admin/views/templates/slider-main-options.php:113 ..
 #: /admin/views/templates/slider-main-options.php:134
-msgid "Display this number of photos"
+msgid "Display this number of photosdd"
 msgstr ""
 
 #: ../admin/views/templates/slider-main-options.php:115 ..
@@ -4115,7 +4115,7 @@ msgid ""
 msgstr ""
 
 #: ../admin/views/templates/slider-main-options.php:144
-msgid "Display a user's public photos"
+msgid "Display a user's public photosdd"
 msgstr ""
 
 #: ../admin/views/templates/slider-main-options.php:144
@@ -4135,7 +4135,7 @@ msgid "Display a gallery"
 msgstr ""
 
 #: ../admin/views/templates/slider-main-options.php:147
-msgid "Display a group's photos"
+msgid "Display a group's photosdd"
 msgstr ""
 
 #: ../admin/views/templates/slider-main-options.php:147
