--- a/www/blog/wp-content/plugins/revslider/languages/revslider-ru_RU.po
+++ b/www/blog/wp-content/plugins/revslider/languages/revslider-ru_RU.po
@@ -4244,7 +4244,7 @@ msgstr "Слайды ( макс. 33 )"
 
 #: ../admin/views/templates/slider-main-options.php:122 ..
 #: admin/views/templates/slider-main-options.php:143
-msgid "Display this number of photos"
+msgid "Display this number of photosdd"
 msgstr "Показывать это кол-во фотографий"
 
 #: ../admin/views/templates/slider-main-options.php:124 ..
@@ -4309,7 +4309,7 @@ msgstr ""
 "key/\">здесь</a> как получить ваш Flickr API key"
 
 #: ../admin/views/templates/slider-main-options.php:153
-msgid "Display a user's public photos"
+msgid "Display a user's public photosdd"
 msgstr "Показывать публичные фотографии пользователя"
 
 #: ../admin/views/templates/slider-main-options.php:153
@@ -4329,7 +4329,7 @@ msgid "Display a gallery"
 msgstr "Показывать галерею"
 
 #: ../admin/views/templates/slider-main-options.php:156
-msgid "Display a group's photos"
+msgid "Display a group's photosdd"
 msgstr "Показывать фотографии группы"
 
 #: ../admin/views/templates/slider-main-options.php:156
